Fix gitignore: track components/magicui, only ignore root magicui/
The broad magicui/ pattern was ignoring both the root submodule and
the project's components/magicui/ directory, causing build failures.

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ next-env.d.ts
 design-system.json
 
 # magic ui monorepo (external dependency, not part of this project)
-magicui/
+/magicui/
 
 # vercel
 .vercel
